# aria_make

./: CLAUDE_STATE_MANAGER_WORK.md  CMakeLists.txt  STATUS.md  TASKS.md  test_c_compiler.cpp
docs/: compile.sh  compiled.txt
include/core/: build_orchestrator.hpp
src/core/: build_orchestrator.cpp
test_project/: build.abc
test_project/src/: hello.aria
tests/: test_state_manager.cpp
